--- a/WelcomePage.html
+++ b/WelcomePage.html
@@ -387,7 +387,7 @@ display: none;
 I’m passionate about social change, data science, music, cooking,
 exercise, vintage fashion, and more! Here are a few things about me:</p>
 <ul>
-<li><strong>Current Location:</strong> Melbourne, Florida</li>
+<li><strong>Current Location:</strong> Melbourne, FL</li>
 <li><strong>Education:</strong> B.S. in Mathematics, Management Science,
 Data Science from Southern Methodist University</li>
 <li><strong>Interests:</strong> Cooking, producing music, running,
